Created containers for calculator display

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>TOP Calculator</title>
   </head>
   <body>
+    <div class="outer">
+        <div class="inner-display"></div>
+        <div class="inner-buttons"></div>
+    </div>
 	<script src="index.js"></script>
   </body>
 </html>
