--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
   <body>
     <div class="outer">
         <div class="inner-display"></div>
-        <div class="inner-buttons"></div>
+        <div class="inner-buttons">
+            <div class="buttons-1">
+                <div class="seven"></div>
+                <div class="eight"></div>
+                <div class="nine"></div>
+                <div class="divide"></div>
+            </div>
+            <div class="buttons-2">
+                <div class="four"></div>
+                <div class="five"></div>
+                <div class="six"></div>
+                <div class="multiply"></div>
+            </div>
+            <div class="buttons-3">
+                <div class="one"></div>
+                <div class="two"></div>
+                <div class="three"></div>
+                <div class="subtract"></div>
+            </div>
+            <div class="buttons-4">
+                <div class="zero"></div>
+                <div class="decimal"></div>
+                <div class="add"></div>
+                <div class="equal"></div>
+            </div>
+        </div>
     </div>
 	<script src="index.js"></script>
   </body>
