--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
         <div class="inner-display"></div>
         <div class="inner-buttons">
             <div class="buttons-1">
-                <div class="seven"></div>
-                <div class="eight"></div>
-                <div class="nine"></div>
-                <div class="divide"></div>
+                <button class="seven"></button>
+                <button class="eight"></button>
+                <button class="nine"></button>
+                <button class="divide"></button>
             </div>
             <div class="buttons-2">
-                <div class="four"></div>
-                <div class="five"></div>
-                <div class="six"></div>
-                <div class="multiply"></div>
+                <button class="four"></button>
+                <button class="five"></button>
+                <button class="six"></button>
+                <button class="multiply"></button>
             </div>
             <div class="buttons-3">
-                <div class="one"></div>
-                <div class="two"></div>
-                <div class="three"></div>
-                <div class="subtract"></div>
+                <button class="one"></button>
+                <button class="two"></button>
+                <button class="three"></button>
+                <button class="subtract"></button>
             </div>
             <div class="buttons-4">
-                <div class="zero"></div>
-                <div class="decimal"></div>
-                <div class="add"></div>
-                <div class="equal"></div>
+                <button class="zero"></button>
+                <button class="decimal"></button>
+                <button class="add"></button>
+                <button class="equal"></button>
             </div>
         </div>
     </div>
