--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
         <div class="inner-display"></div>
         <div class="inner-buttons">
             <div class="buttons-1">
-                <button class="seven"></button>
-                <button class="eight"></button>
-                <button class="nine"></button>
-                <button class="divide"></button>
+                <button class="seven">7</button>
+                <button class="eight">8</button>
+                <button class="nine">9</button>
+                <button class="divide">÷</button>
             </div>
             <div class="buttons-2">
-                <button class="four"></button>
-                <button class="five"></button>
-                <button class="six"></button>
-                <button class="multiply"></button>
+                <button class="four">4</button>
+                <button class="five">5</button>
+                <button class="six">6</button>
+                <button class="multiply">x</button>
             </div>
             <div class="buttons-3">
-                <button class="one"></button>
-                <button class="two"></button>
-                <button class="three"></button>
-                <button class="subtract"></button>
+                <button class="one">1</button>
+                <button class="two">2</button>
+                <button class="three">3</button>
+                <button class="subtract">-</button>
             </div>
             <div class="buttons-4">
-                <button class="zero"></button>
-                <button class="decimal"></button>
-                <button class="add"></button>
-                <button class="equal"></button>
+                <button class="zero">0</button>
+                <button class="decimal">.</button>
+                <button class="add">+</button>
+                <button class="equal">=</button>
             </div>
         </div>
     </div>
