--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="outer">
-        <div class="inner-display"></div>
+        <div class="inner-display">
+            <div class="display">00000</div>
+        </div>
         <div class="inner-buttons">
             <div class="buttons-1">
                 <button class="seven">7</button>
