Added "CLEAR" and "DELETE" buttons

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <div class="display">00000</div>
         </div>
         <div class="inner-buttons">
+            <div class="buttons-0">
+                <button class="CLEAR">CLEAR</button>
+                <button class="DELETE">DELETE</button>
+            </div>
             <div class="buttons-1">
                 <button class="seven">7</button>
                 <button class="eight">8</button>
