Added "CLEAR" and "DELETE" functionality

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <body>
     <div class="outer">
         <div class="inner-display">
-            <div class="display">00000</div>
+            <div class="display">123456</div>
         </div>
         <div class="inner-buttons">
             <div class="buttons-0">
-                <button class="CLEAR">CLEAR</button>
-                <button class="DELETE">DELETE</button>
+                <button class="clear">CLEAR</button>
+                <button class="delete">DELETE</button>
             </div>
             <div class="buttons-1">
                 <button class="seven">7</button>
