Added a tracker display and edited the dimensions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div class="outer">
         <div class="inner-display">
+            <div class="tracker">test</div>
             <div class="display">123456</div>
         </div>
         <div class="inner-buttons">
