--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <div class="outer">
         <div class="inner-display">
-            <div class="tracker">test</div>
-            <div class="display">123456</div>
+            <div class="tracker"></div>
+            <div class="display"></div>
         </div>
         <div class="inner-buttons">
             <div class="buttons-0">
