Added other operator functions and button click color

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 <button class="seven">7</button>
                 <button class="eight">8</button>
                 <button class="nine">9</button>
-                <button class="divide">÷</button>
+                <button class="/">÷</button>
             </div>
             <div class="buttons-2">
                 <button class="four">4</button>
                 <button class="five">5</button>
                 <button class="six">6</button>
-                <button class="multiply">x</button>
+                <button class="*">x</button>
             </div>
             <div class="buttons-3">
                 <button class="one">1</button>
                 <button class="two">2</button>
                 <button class="three">3</button>
-                <button class="subtract">-</button>
+                <button class="-">-</button>
             </div>
             <div class="buttons-4">
                 <button class="zero">0</button>
                 <button class="decimal">.</button>
-                <button class="add">+</button>
-                <button class="equal">=</button>
+                <button class="+">+</button>
+                <button class="=">=</button>
             </div>
         </div>
     </div>
