--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                 <button class="delete">DELETE</button>
             </div>
             <div class="buttons-1">
-                <button class="seven">7</button>
-                <button class="eight">8</button>
-                <button class="nine">9</button>
+                <button class="7">7</button>
+                <button class="8">8</button>
+                <button class="9">9</button>
                 <button class="/">÷</button>
             </div>
             <div class="buttons-2">
-                <button class="four">4</button>
-                <button class="five">5</button>
-                <button class="six">6</button>
+                <button class="4">4</button>
+                <button class="5">5</button>
+                <button class="6">6</button>
                 <button class="*">x</button>
             </div>
             <div class="buttons-3">
-                <button class="one">1</button>
-                <button class="two">2</button>
-                <button class="three">3</button>
+                <button class="1">1</button>
+                <button class="2">2</button>
+                <button class="3">3</button>
                 <button class="-">-</button>
             </div>
             <div class="buttons-4">
-                <button class="zero">0</button>
+                <button class="0">0</button>
                 <button class="decimal">.</button>
                 <button class="+">+</button>
                 <button class="=">=</button>
